# devspec

./: .gitignore  LICENSE  README.md  pyproject.toml  sgconfig.yml
.claude/agents/: devspec-worker.md
.claude/agents/review/: architecture-reviewer.md  performance-reviewer.md  security-reviewer.md
skills/devspec-archive/: SKILL.md
skills/devspec-auto/: SKILL.md
skills/devspec-build/: SKILL.md
skills/devspec-explore/: SKILL.md
skills/devspec-learn/: SKILL.md
skills/devspec-memory/: SKILL.md
skills/devspec-multi/: SKILL.md
skills/devspec-plan/: SKILL.md
skills/devspec-verify/: SKILL.md
src/devspec/: cli.py
src/devspec/commands/: analyze.py  archive.py  ask.py  context.py  handoff.py  init.py  instructions.py  list.py  migrate.py  new.py  preflight.py  status.py  validate.py
src/devspec/core/: analyzer.py  archive.py  change.py  delta_parser.py  graph.py  handoff.py  instructions.py  preflight.py  resolve.py  schema.py  spec_merge.py  state.py  validator.py
src/devspec/data/: schema.yaml
src/devspec/data/patterns/: README.md
src/devspec/data/patterns/c/: dead-code.yml  debug.yml  (+1 more)
src/devspec/data/templates/: proposal.md  spec.md
src/devspec/mcp/: __init__.py  __main__.py  resources.py  server.py  tools.py
src/devspec/tui/: ask_app.py
tests/: conftest.py  test_analyzer.py  test_archive.py  test_cli.py  test_delta_parser.py  test_graph.py  test_handoff.py  test_init.py  test_mcp_resources.py  test_mcp_tools.py  test_migrate.py  test_preflight.py  test_resolve.py  test_schema.py  test_spec_merge.py  test_state.py  test_validator.py
(+5 files in other folders)
